Edited some text

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <font size="5">      
 <ul style="list-style-type:disc">
     
-  <li>Playing the guitar as as source of peace.</li>
+  <li>Playing the guitar as a source of peace.</li>
   <li>Adventuring out to new places, exploring new landmarks and hidden gems.</li>
   <li>Trying and eating new foods.</li> 
   <li>Playing basketball, badminton, ultimate frisbee, and most team games. </li> 
