--- a/work.html
+++ b/work.html
@@ -41,9 +41,11 @@
     <center>
     <h1><font size="5"><br><br><br><br><br><br><br><br><br><br><br><br>Reference Quotes </font></h1>      
     </center>
-        <h1><font size="4"><b>Brittney Nicole (Director of San Jose iD Tech Camps) </b>  - "Justin was a top performer at camp, he always went above and beyond to ensure the success of his students and brought a positive energy into work every morning!" </font></h1>
-    <h1><font size="4"><b>Brandon Zwier (Assistant Director of Santa Calra iD Tech Camps)</b> - "Justin Yu worked as a wonderful teacher and mentor, and helped raise staff morale in any way he could. Punctual and hardworking, Justin made a fantastic addition to our team."  </font></h1>  
-<!--    <h1><font size="4">Reference Quotes </font></h1>  -->
+    <h1><font size="4"><b>Amber Kantner (Director of Santa Clara iD Tech Camps) - "Justin Yu's programming skills really shone through his engaging lessons, and his enthusiasm for all aspects of camp made him a great addition to our team."</b> </font></h1> 
+    
+    <h1><font size="4"><b>Brandon Zwier (Assistant Director of Santa Clara iD Tech Camps)</b> - "Justin Yu worked as a wonderful teacher and mentor, and helped raise staff morale in any way he could. Punctual and hardworking, Justin made a fantastic addition to our team."  </font></h1>  
+ 
+    <h1><font size="4"><b>Brittney Nicole (Director of San Jose iD Tech Camps) </b>  - "Justin was a top performer at camp, he always went above and beyond to ensure the success of his students and brought a positive energy into work every morning!" </font></h1>
 
 
     
