--- a/projects.html
+++ b/projects.html
@@ -2,15 +2,44 @@
 <html>
 <head>
 <link rel="stylesheet" href="websitestyle.css">
-
+<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 <title>Page Title</title>
 </head>
-<div style ="margin-left:10%; margin-right:10%">
 
 <body class='fade-in'>
+    
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li ><a href=index.html>Home</a></li>
+        <li ><a href= work.html>Work Experience</a></li>
+        <li class="active"><a href=#>Projects</a></li>
+        <li><a href="JustinYuResume.pdf" target="_blank">Resume</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+
+      </ul>
+    </div>
+  </div>
+</nav>
+    
+    <div style ="margin-left:10%; margin-right:10%">
+
     <div style="position: relative;">
 
-        <div style="position: fixed; top: 5; right: 0;"><a href="index.html"><input type="button" class="button" value="Home" /></a></div>
 </div>
 <h1><center><font size="7"><br>Projects</font></center></h1>
 <b><hr></b>
