added some easter eggs

--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
-
+<!--
+    __  ___    _____          
+   / / / (_)  /  _( )____ ___ 
+  / /_/ / /   / / |// __ `__ \
+ / __  / /  _/ /   / / / / / /
+/_/ /_/_/  /___/  /_/ /_/ /_/ 
+                              
+       __           __  _     
+      / /_  _______/ /_(_)___ 
+ __  / / / / / ___/ __/ / __ \
+/ /_/ / /_/ (__  ) /_/ / / / /
+\____/\__,_/____/\__/_/_/ /_/  
+-->
+    <script>
+        console.log("Welcome to my website!");
+        console.log("I see you're looking at my code, well I used Bootstrap, HTML/CSS, and Javascript to create my page! If you have any questions click around and email me at the bottom I will respond ASAP!");
+        console.log("Cheers!");
+    </script>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -284,6 +301,8 @@
                 <button type="submit">Send</button>
             </form>
         </div>
+        <h4>Or email me at justinyu9@yahoo.com</h4>
+        <h4>408.833.2630</h4>
         <!-- End #contact-form -->
     </div>
     <!-- End #contact -->
