fixed a broken link

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                         <p>
                             Web Application whose goal is to connect the youth with politics. Pulled data from Propublica API, and stored information into a database using Node.js, express and SQL. Used Scrum metholdology for team efficiency.
                         </p>
-                        <a href="https://docs.google.com/presentation/d/1yM9IMSvKFKGr-2xZB6AhVWQLdsA0OcovS92hH7HffVU/edit?usp=sharing" target="_blank">Github</a>&emsp;<a href="https://docs.google.com/presentation/d/1yM9IMSvKFKGr-2xZB6AhVWQLdsA0OcovS92hH7HffVU/edit?usp=sharing" target="_blank">Details</a>
+                        <a href="https://github.com/JoeLiang3/ripple" target="_blank">Github</a>&emsp;<a href="https://docs.google.com/presentation/d/1yM9IMSvKFKGr-2xZB6AhVWQLdsA0OcovS92hH7HffVU/edit?usp=sharing" target="_blank">Details</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
