--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/Finder.png" width="300" height="200"/>
+                        <img src="images/Finder.png" width="300" height="200" onclick="window.open(this.src)"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -201,10 +201,26 @@
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/NoseGoes.jpg" width="300" height="200" onclick="window.open(this.src)"/>
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3><b>NoseGoes</b> - BackEnd</h3>
+                        <p>
+                            Project for HackUCSC(2018). Web Application that allows users to assign tasks to housemates in an orderly fashion. Used FireBase for a database, and used HTML/CSS and Bootsrap to design the pages. Made the user authentication, user login, and designed some layouts. 
+                        </p>
+                        <a href="https://nosegoes-34831.firebaseapp.com/" target="_blank">View Project</a>&emsp;<a href="https://github.com/jmenon3/nosegoes" target="_blank">Github</a>
+        
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/ripple.png" width="300" height="200"/>
+                        <img src="images/ripple.png" width="300" height="200" onclick="window.open(this.src)"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -219,7 +235,7 @@
                 <!-- End .project -->
                                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/focus.png" width="300" height="200"/>
+                        <img src="images/focus.png" width="300" height="200" onclick="window.open(this.src)"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -233,7 +249,7 @@
                 </div>
                     <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/Travel.png" width="300" height="200"/>
+                        <img src="images/Travel.png" width="300" height="200" onclick="window.open(this.src)"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -247,7 +263,7 @@
                 </div>
                     <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/DormHacks.png" width="300" height="200"/>
+                        <img src="images/DormHacks.png" width="300" height="200" onclick="window.open(this.src)"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
