changed some text

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3><b>NoseGoes</b> - BackEnd</h3>
+                        <h3><b>NoseGoes</b> - Backend</h3>
                         <p>
                             Project for HackUCSC(2018). Web Application that allows users to assign tasks to housemates in an orderly fashion. Used FireBase for a database, and used HTML/CSS and Bootsrap to design the pages. Made the user authentication, user login, and designed some layouts. 
                         </p>
