Changed resume and fixed typo

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div id="lead-content">
             <h1>Justin Yu</h1>
             <h2 style=color:white>Software Engineer</h2>
-            <a href="images/resume.pdf" target="_blank" class="btn-rounded-white">Open Resume</a>
+            <a href="images/JustinYuResume.pdf" target="_blank" class="btn-rounded-white">Open Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -193,7 +193,7 @@
                     <div class="project-info">
                         <h3><b>Finder</b> - Full Stack</h3>
                         <p>
-                            Web Application that allows users to report lost and found items. Users can make an account and data will be stored in a database. I worked on the Search Bar, forms, and storing inormation into a database. Also helped with styling, and the Google Map API. Used Web2py, Vue.js, SQL, Python, Javascript, and HTML/CSS. 
+                            Web Application that allows users to report lost and found items. Users can make an account and data will be stored in a database. I worked on the Search Bar, forms, and storing information into a database. Also helped with styling, and the Google Map API. Used Web2py, Vue.js, SQL, Python, Javascript, and HTML/CSS. 
                         </p>
                         <a href="https://dawaaadeee3.pythonanywhere.com/Finder/default/index" target="_blank">View Project</a>&emsp;<a href="https://github.com/janeshchhabra/Finder" target="_blank">Github</a>&emsp;<a href="https://docs.google.com/presentation/d/17c1WU1CxKckKLAvY3ddgNgXNOmGcAE-iEYTo4MWduc0/edit?usp=sharing" target="_blank">Details</a>
         
