Updated pictures and updated Alarm tasks

--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
             <div data-date="July 2018 – September 2018">
                 <h3>Alarm.com</h3>
                 <h4>Software Engineer Intern</h4>
-                <img src="images/alarm2.jpg"  width="300" height="200" />
+                <img src="images/Alarm.jpg"  width="150" height="200" style="margin-left:5%" />
                 <ul>
-                    <li>Innovating and improving existing products.</li>
-                    <li>Taking ownership of projects to ensure their successful completion with respect to deadlines.</li>
-                    <li>Collaborating with Quality Assurance in developing a test plan to ensure successful deployment of
-                        updates.</li>
+                    <li>Wrote unit tests in C\# to check backend SQL database returns function calls properly</li>
+                    <li>Refined ember add-ons by deleting devDependencies which will decrease build/compile time of programs by up to 80%.</li>
+                    <li>Configured formatting using Prettier which reformats code on save.</li>
+                    <li>• Enhanced User Interaction on Customer and Dealer Page by using Ember.js and C#</li>
                 </ul>
             </div>
 
@@ -285,6 +285,7 @@
         <ul>
             <li>Java</li>
             <li>C</li>
+            <li>C#</li>
             <li>C++</li>
             <li>SQL</li>
             <li>JavaScript</li>
@@ -292,6 +293,7 @@
             <li>HTML</li>
             <li>Node.JS</li>
             <li>Vue.JS</li>
+            <li>Ember.JS</li>
             <li>Web2Py</li>
             <li>CSS</li>
             <li>Assembley</li>
