--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <li>Wrote unit tests in C\# to check backend SQL database returns function calls properly</li>
                     <li>Refined ember add-ons by deleting devDependencies which will decrease build/compile time of programs by up to 80%.</li>
                     <li>Configured formatting using Prettier which reformats code on save.</li>
-                    <li>• Enhanced User Interaction on Customer and Dealer Page by using Ember.js and C#</li>
+                    <li>Enhanced User Interaction on Customer and Dealer Page by using Ember.js and C#</li>
                 </ul>
             </div>
 
