--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div id="lead-content">
             <h1>Justin Yu</h1>
             <h2 style=color:white>A Software Engineer</h2>
-            <h3 style=color:white>with a minor in Technoloy Information Management</h3>
+            <h3 style=color:white>with a minor in Technology Information Management</h3>
             <a href="images/JustinYuResume.pdf" target="_blank" class="btn-rounded-white">Open Resume</a>
         </div>
         <!-- End #lead-content -->
